--- a/index.html
+++ b/index.html
@@ -88,11 +88,17 @@
 			</tr>
 			<tr>
 				<td id="trainingControls" style="text-align: left; background:none; border:0px; text-align: center; text-justify: inter-word;">
-					<span id="topButtonWrapper" style="display: inline-block; margin-top: 5px; margin-left:-205px; position: absolute;"><label class="buttonbordertrainer"><button id="respecAll" class="button buttonTop">/RESPEC ALL</button></label><label class="buttonbordertrainer"><button id="respecRealm" class="button buttonTop">/RESPEC REALM</button></label><label class="buttonbordertrainer"><button id="respecBuy" class="button buttonTop">/RESPEC BUY</button></label></span><br />
-					<span id="bottonButtonWrapper" style="display: inline-block; margin-top: 20px; margin-left:-5px;"><label class="buttonbordertrainer"><button id="trainConfirm" class="button buttonBottom" style="width:85px;" onclick="applySpecPoints()">TRAIN</button></label><label class="buttonbordertrainer" style="margin-left:20px; margin-right:10px;"><button id="trainReset" class="button buttonBottom">RESET</button></label><label class="buttonbordertrainer"><button id="trainCancel" class="button buttonBottom" style="width:85px;" onclick="closeTrainer()">CANCEL</button></label></span>
+					<span id="topButtonWrapper" style="display: inline-block; margin-top: 5px; margin-left:-205px; position: absolute;"><label class="buttonbordertrainer"><button id="respecAll" class="button buttonTop" onclick="respecAllPoints()">/RESPEC ALL</button></label><label class="buttonbordertrainer"><button id="respecRealm" class="button buttonTop">/RESPEC REALM</button></label><label class="buttonbordertrainer"><button id="respecBuy" class="button buttonTop">/RESPEC BUY</button></label></span><br />
+					<span id="bottonButtonWrapper" style="display: inline-block; margin-top: 20px; margin-left:-5px;"><label class="buttonbordertrainer"><button id="trainConfirm" class="button buttonBottom" style="width:85px;" onclick="applySpecPoints()">TRAIN</button></label><label class="buttonbordertrainer" style="margin-left:20px; margin-right:10px;"><button id="trainReset" class="button buttonBottom" onclick="resetTrainer()">RESET</button></label><label class="buttonbordertrainer"><button id="trainCancel" class="button buttonBottom" style="width:85px;" onclick="closeTrainer(), resetTrainer()">CANCEL</button></label></span>
 				</td>
 			</tr>
 		</table>
+	</div>
+</div>
+
+<!--Modal for hover over-->
+<div id="hoverModal" class="hoverModal">
+	<div id="hoverContent" class="hoverContent">
 	</div>
 </div>
 
@@ -200,7 +206,7 @@
 				<!-- Scroll window -->
 			</div>
 		</td>
-		<td class="table-align"><!-- Combat styles page -->
+		<td id="combatStyles" class="table-align"><!-- Combat styles page -->
 			<label class="objectborder pagetitle" style="padding-right: 78%;">Combat</label><br />
 			<div id="combat" class="abbox">
 				<!-- Insert Styles here -->
@@ -208,7 +214,7 @@
 			<label class="buttonborder"><button type="button" name="train" id="train" class="button" onclick="openTrainer()">TRAIN</button></label>
 			<!-- Selected Class trained styles -->
 		</td>
-		<td class="table-align"><!-- Magic Spells page -->
+		<td id="magicSpells" class="table-align"><!-- Magic Spells page -->
 			<label class="objectborder pagetitle" style="padding-right: 82%;">Magic</label><br />
 			<div id="magic" class="abbox">
 			<!-- Selected Class spells, both naturally learned and trained -->
