Added an id to specializations td.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			<div class="paperdoll"></div>
 			<div class="inventory"></div>
 		</td>
-		<td class="table-align"><!-- Specializations page -->
+		<td id="spec" class="table-align"><!-- Specializations page -->
 			<label class="objectborder pagetitle" style="padding-right: 40px;">Specializations</label>  
 			<label class="objectborder">Points:<input type="number" name="specPoints" id="specPoints" value="0" min="0" max="9999" placeholder="0" class="selectinputborder" style="text-align: right;" readonly></label><br />
 			<div id="specBox" class="specbox">
